--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,16 @@ dependencies {
     implementation 'junit:junit:4.12'
         implementation 'com.google.guava:guava:25.1-jre'
     implementation 'org.tinylog:tinylog:1.2'
-    // https://mvnrepository.com/artifact/pircbot/pircbot
-    implementation group: 'pircbot', name: 'pircbot', version: '1.5.0'
+    // https://mvnrepository.com/artifact/org.pircbotx/pircbotx
+    implementation group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
+
     implementation 'org.mongodb:mongo-java-driver:2.12.3'
 
     compile 'com.google.guava:guava:25.1-jre'
     compile 'org.tinylog:tinylog:1.2'
-    // https://mvnrepository.com/artifact/pircbot/pircbot
-    compile group: 'pircbot', name: 'pircbot', version: '1.5.0'
+    // https://mvnrepository.com/artifact/org.pircbotx/pircbotx
+    compile group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
+
     compile 'org.mongodb:mongo-java-driver:2.12.3'
 
 }
