--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,16 @@ dependencies {
     implementation group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
 
     implementation 'org.mongodb:mongo-java-driver:2.12.3'
+        // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
 
     compile 'com.google.guava:guava:25.1-jre'
     compile 'org.tinylog:tinylog:1.2'
     // https://mvnrepository.com/artifact/org.pircbotx/pircbotx
     compile group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+
 
     compile 'org.mongodb:mongo-java-driver:2.12.3'
 
