--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
+
 
 
 
@@ -64,7 +66,8 @@ jar {
     manifest {
         attributes 'Main-Class' : 'keksdose.fwkib.Main'
     }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    doFirst {
+        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } 
     }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA' 
 }
