--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,14 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     implementation 'junit:junit:4.12'
-        implementation 'com.google.guava:guava:25.1-jre'
+    implementation 'com.google.guava:guava:25.1-jre'
     implementation 'org.tinylog:tinylog:1.2'
     // https://mvnrepository.com/artifact/org.pircbotx/pircbotx
     implementation group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
 
-    implementation 'org.mongodb:mongo-java-driver:2.12.3'
+    //implementation 'org.mongodb:mongodb-driver-async:3.8.2'
+    compile 'org.mongodb:mongo-java-driver:3.8.2'
+
         // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
 
@@ -34,7 +36,6 @@ dependencies {
 
 
 
-    compile 'org.mongodb:mongo-java-driver:2.12.3'
 
 }
 
@@ -74,3 +75,5 @@ jar {
     }
     exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA' 
 }
+
+
