start of #help and cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+Help.json
+project
+FWKIB.iml
+gradlew
+gradlew.bat
+local.properties
+settings.gradle
+.classPath
+.idea
+.settings
