--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'org.json', name: 'json', version: '20180813'
-compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
+
 
 
 
