--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,23 @@
 plugins {
     id 'java'
     id 'application'
+        id "org.ajoberstar.grgit" version "1.7.2"
+
     
 }
 tasks.distZip.enabled = false
 tasks.distTar.enabled = false
 
-
+sourceSets {
+        main {
+                java {
+                        srcDirs= ["src/main/java"]
+                }
+                resources {
+                        srcDirs= ["src/main/resources"]
+                }
+        }
+}
 
 
 
@@ -22,7 +33,7 @@ dependencies {
     //implementation group: 'org.pircbotx', name: 'pircbotx', version: '2.0.1'
 
     //implementation 'org.mongodb:mongodb-driver-async:3.8.2'
-    compile 'org.mongodb:mongo-java-driver:3.8.2'
+    compile 'org.mongodb:mongo-java-driver:+'
     implementation name:"KeksIRC",version:"+"
     compile name:"KeksIRC",version:"+"
 
@@ -42,8 +53,12 @@ dependencies {
     //compile "org.deeplearning4j:deeplearning4j-core:1.0.0-beta5"
     //compile "org.nd4j:nd4j-native-platform:1.0.0-beta5"
     //compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp-uima', version: '1.0.0-beta5'
+    compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '+'
+    compile 'edu.stanford.nlp:stanford-corenlp:+:models'
+    compile "org.nibor.autolink:autolink:+"
+     
 }
-
+//https://stackoverflow.com/questions/27337268/how-to-use-heideltime-temporal-tagger-inside-a-java-project einbauen
 
 
 repositories {
@@ -56,20 +71,38 @@ repositories {
     }
     
 }
+import java.text.SimpleDateFormat
+import org.ajoberstar.grgit.Grgit
 
+version = 0.1
 
-
+task versionTxt()  {
+    doLast {
+        new File("$projectDir/src/main/resources", "version").text = """
+Version: $version
+Revision: ${grgit.head().abbreviatedId}
+Buildtime: ${new SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new Date())}
+Application-name: ${project.name}"""
+    }
+}
+build{
+    dependsOn versionTxt
+}
 
 
 
 mainClassName = 'keksdose.fwkib.Main'
 jar {
+
     manifest {
         attributes 'Main-Class' : 'keksdose.fwkib.Main'
     }
     doFirst {
-        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } 
+        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+        from "src/main/resources"
+ 
     }
+
     exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA' 
 }
 
