--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'org.mongodb:mongo-java-driver:+'
     implementation name:"KeksIRC",version:"+"
     compile name:"KeksIRC",version:"+"
-
+    implementation name:"SpamClassifier",version:"+"
         // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
 
